--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "vector": "cpp",
         "deque": "cpp",
         "string": "cpp"
-    }
+    },
+    "python.pythonPath": "D:\\DELL\\Softwares\\Python\\python.exe"
 }
